...
            <ImageBackground
            source={require('@/assets/images/favicon-drop.png')}
            style={ [{height: '100%'}, {aspectRatio: 1},] }
            resizeMode="cover"
            />

            <Text style={styles.headingText}>SOL Inventory</Text>

          </LinearGradient>
        </View>

      </ImageBackground>

...
          <>
          <DynamicButton buttons={[
            {
              type: 1, // internal
              shape: 0, // full
              buttonConfig: {
                text: "Borrow an Item",
                icon: "shopping-basket",
                internalLink: `../borrow/borrowItems`,
                backgroundGradient: ["0", "rgba(60,129,246,1)", "rgba(149, 185, 247, 1)"]
              }
            },
            {
...
