...
      />
      <Tabs.Protected guard = {(session && session.user) ? true : false}>
      <Tabs.Screen
        name="borrow"
        
        options={{
          title: 'Borrow',
	  headerShown: false,
          tabBarIcon: ({ color }) => <SimpleLineIcons size={16} name="drawer" color={color} />,
        }}
      />
      </Tabs.Protected>
    </Tabs>
...
